# huggingface-evaluate_layout-metrics

./: .gitignore  Makefile  README.md  layout_alignment.py  pyproject.toml
.github/workflows/: ci.yaml  deploy_to_hub_reusable.yaml  layout_alignment.yaml  layout_average_iou.yaml  layout_generative_model_scores.yaml  layout_maximum_iou.yaml  layout_non_alignment.yaml  layout_occlusion.yaml  layout_overlap.yaml  layout_overlay.yaml  layout_underlay_effectiveness.yaml  layout_underlay_effectivness.yaml  layout_unreadability.yaml  layout_utility.yaml  layout_validity.yaml  push_to_space.yaml
layout_alignment/: layout_alignment.py
layout_average_iou/: layout-average-iou.py  layout_average_iou.py
layout_generative_model_scores/: layout_generative_model_scores.py
layout_maximum_iou/: layout-maximum-iou.py  layout_maximum_iou.py
layout_non_alignment/: layout-non-alignment.py
layout_occlusion/: layout-occlusion.py
layout_overlap/: layout-overlap.py  layout_overlap.py
layout_overlay/: README.md  layout-overlay.py
layout_underlay_effectiveness/: README.md  layout-underlay-effectiveness.py
layout_unreadability/: README.md  layout-unreadability.py
layout_utility/: README.md  layout-utility.py
layout_validity/: layout-validity.py
metrics/layout_alignment/: README.md  app.py  layout-alignment.py  pyproject.toml
metrics/layout_average_iou/: README.md  app.py  pyproject.toml
metrics/layout_generative_model_scores/: README.md  app.py  layout-generative-model-scores.py  pyproject.toml
metrics/layout_maximum_iou/: README.md  app.py  pyproject.toml
metrics/layout_non_alignment/: README.md  app.py  layout-non-alignment.py  pyproject.toml
metrics/layout_occlusion/: README.md  app.py  layout-occlusion.py  pyproject.toml
metrics/layout_overlap/: README.md  app.py  layout-overlap.py  pyproject.toml
metrics/layout_overlay/: README.md  app.py  layout-overlay.py  pyproject.toml
metrics/layout_underlay_effectiveness/: README.md  app.py  layout-underlay-effectiveness.py  pyproject.toml
metrics/layout_unreadability/: README.md  app.py  layout-unreadability.py  pyproject.toml
metrics/layout_utility/: README.md  app.py  layout-utility.py  pyproject.toml
metrics/layout_validity/: README.md  app.py  layout-validity.py  pyproject.toml
scripts/: push_to_hub.sh
test_fixtures/: batch_bbox2.npy  batch_bbox3.npy  bbox1.npy  layouts2.pkl  layouts_main.pkl  mask1.npy  mask2.npy  mask3.npy
tests/: conftest.py  layout_alignment_test.py  layout_average_iou_test.py  layout_generative_model_scores_test.py  layout_maximum_iou_test.py  layout_non_alignment_test.py  layout_occulusion_test.py  layout_overlap_test.py  layout_overlay_test.py  layout_underlay_effectiveness_test.py  layout_unreadability_test.py  layout_utility_test.py  layout_validity_test.py
