[project]
name = "huggingface-evaluate-layout-metrics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "evaluate[template]>=0.4.6",
    "scipy>=1.16.3",
    "prdc>=0.2",
    "pytorch-fid>=0.3.0",
    "Pillow>=10.0.0",
    "opencv-python>=4.12.0.88",
]

[dependency-groups]
dev = ["mypy>=1.0.0", "pytest>=6.0.0", "ruff>=0.1.5", "torch>=2.0.0"]

[tool.uv.workspace]
members = ["metrics/*"]
