[project]
name = "huggingface-evaluate-layout-metrics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["evaluate[template]>=0.4.6"]

[dependency-groups]
dev = ["mypy>=1.0.0", "pytest>=6.0.0", "ruff>=0.1.5", "torch>=2.0.0"]

[tool.uv.workspace]
members = ["metrics/*"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
explicit_package_bases = true
