[project]
name = "layout-generative-model-scores"
version = "0.1.0"
description = "HuggingFace Evaluate metric for layout generative model scores"
readme = "README.md"
authors = [
    { name = "Shunsuke KITADA", email = "shunsuke.kitada.0831@gmail.com" },
]
requires-python = ">=3.11"
dependencies = ["evaluate", "prdc>=0.2", "pytorch-fid>=0.3.0"]
