[project]
name = "layout-unreadability"
version = "0.1.0"
description = "HuggingFace Evaluate metric for layout unreadability"
readme = "README.md"
authors = [
    { name = "Shunsuke KITADA", email = "shunsuke.kitada.0831@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.12.0.88",
    "Pillow>=10.0.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
